config/istio/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio: ingressgateway
  name: mcp-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: mcp # deny all by default overridden by AuthPolicy on route
      hostname: 'mcp.127-0-0-1.sslip.io' #public accessibly MCP host one used by client
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: keycloak
      hostname: 'keycloak.127-0-0-1.sslip.io'
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: mcps # deny all by default overridden by AuthPolicy on route
      hostname: '*.mcp.test.com' #public accessibly MCP host (doesn't need dns as it is for rewritten hosts)
      port: 8080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
